...
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/regPassword"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="Password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/registration"
                android:text="Login"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius = "20dp"/>
        </LinearLayout>
...
